# ognDataLogger

./: CMakeLists.txt  DBFeeder.cpp  DBFeeder.h  DebugLog.cpp  DebugLog.h  Findogn_lib.cmake  LogPusher.cpp  LogPusher.h  Logger.cpp  Logger.h  OgnDataPicker.cpp  OgnDataPicker.h  OgnLogger.cpp  OgnLogger.h  README.md  StillAlive.cpp  StillAlive.h  Watchdog.cpp  Watchdog.h  install.sh  main.cpp
cmake/: Findogn_lib.cmake
cpp-lib/: CMakeLists.txt
cpp-lib/include/cpp-lib/: bg-typedefs.h  geodb.h  map.h  matrix-wrapper.h  ogn.h  platform_rt  util.h
cpp-lib/include/cpp-lib/sys/: network.h
cpp-lib/prj/: Makefile  def.compiler.gcc-5-ubuntu-14
cpp-lib/scripts/: build.sh
cpp-lib/src/posix1b/: realtime.cpp
cpp-lib/testing/data/input/: ogn-2.ogn
